@@ -203,4 +203,12 @@ public class TupleTypeTest extends CQLTester
         assertInvalidMessage("Not enough bytes to read 0th component",
                              "INSERT INTO %s (pk, t) VALUES (?, ?)", 1, Long.MAX_VALUE);
     }
+
+    @Test
+    public void testTupleModification() throws Throwable
+    {
+        createTable("CREATE TABLE %s(pk int PRIMARY KEY, value tuple<int, int>)");
+        assertInvalidMessage("Invalid operation (value = value + (1, 1)) for tuple column value",
+                             "UPDATE %s SET value += (1, 1) WHERE k=0;");
+    }
 }
